TRoW: Give monsters and undeads their own sides
Noticing that orcs can control undead units feels strange. This
can give the AI an advantage too. One would expect monsters and
undeads to move autonomously.

--- a/data/campaigns/The_Rise_Of_Wesnoth/scenarios/12_A_Final_Spring.cfg
+++ b/data/campaigns/The_Rise_Of_Wesnoth/scenarios/12_A_Final_Spring.cfg
@@ -150,6 +150,16 @@
         {INCOME 2 4 8}
     [/side]
 
+    [side]
+        side=6
+        no_leader=yes
+        team_name=orcs
+        hidden=yes
+        [ai]
+            village_value=0
+        [/ai]
+    [/side]
+
     #Time Areas broken - no visible change, use a halo with it
     [time_area]
         x=1,1,1,2,2,2,2,3,3,3,3,3,4,4,4,4,5,5,5             #,6,6
@@ -429,26 +439,26 @@
 
         [move_unit_fake]
             type=Familiar
-            side=5
+            side=6
             x=45,44,43,42
             y=22,22,23,23
         [/move_unit_fake]
 
         # wmllint: whofield LIVING_INTEL 2
-        {LIVING_INTEL (Familiar) (Familiar) ( _ "Familiar") "portraits/familiar.png" 5 42 23}
+        {LIVING_INTEL (Familiar) (Familiar) ( _ "Familiar") "portraits/familiar.png" 6 42 23}
         [+unit]
             facing=sw
         [/unit]
 
         [move_unit_fake]
             type=Ancient Lich
-            side=5
+            side=6
             x=45,44,43,42,42
             y=22,22,23,23,24
         [/move_unit_fake]
 
         # wmllint: whofield UNDEAD_INTEL 2
-        {UNDEAD_INTEL (Ancient Lich) (Lich-Lord Jevyan) ( _ "Lich-Lord Jevyan") "portraits/jevyan.png" 5 42 24}
+        {UNDEAD_INTEL (Ancient Lich) (Lich-Lord Jevyan) ( _ "Lich-Lord Jevyan") "portraits/jevyan.png" 6 42 24}
         [+unit]
             facing=sw
         [/unit]
@@ -466,7 +476,7 @@
             message= _ "You monster! You’ve betrayed our people — to ally yourself with these orcs?!"
         [/message]
 
-        {UNDEAD_INTEL (Death Knight) (Fool Prince) ( _ "Fool Prince") "portraits/undead/death-knight.png" 5 43 24}
+        {UNDEAD_INTEL (Death Knight) (Fool Prince) ( _ "Fool Prince") "portraits/undead/death-knight.png" 6 43 24}
 
         [message]
             speaker=Lich-Lord Jevyan
@@ -491,23 +501,23 @@
 
         [move_unit_fake]
             type=Ancient Lich
-            side=5
+            side=6
             x=42,42,43,44,45
             y=24,23,23,22,22
         [/move_unit_fake]
 
-        {LOYAL_UNIT 5 (Revenant) 41 22}
-        {LOYAL_UNIT 5 (Bone Shooter) 43 24}
+        {LOYAL_UNIT 6 (Revenant) 41 22}
+        {LOYAL_UNIT 6 (Bone Shooter) 43 24}
 #ifdef NORMAL
-        {LOYAL_UNIT 5 (Chocobone) 42 23}
-        {LOYAL_UNIT 5 (Chocobone) 43 23}
+        {LOYAL_UNIT 6 (Chocobone) 42 23}
+        {LOYAL_UNIT 6 (Chocobone) 43 23}
 #endif
 
 #ifdef HARD
-        {LOYAL_UNIT 5 (Chocobone) 42 23}
-        {LOYAL_UNIT 5 (Chocobone) 43 23}
-        {LOYAL_UNIT 5 (Necrophage) 44 23}
-        {LOYAL_UNIT 5 (Necrophage) 44 22}
+        {LOYAL_UNIT 6 (Chocobone) 42 23}
+        {LOYAL_UNIT 6 (Chocobone) 43 23}
+        {LOYAL_UNIT 6 (Necrophage) 44 23}
+        {LOYAL_UNIT 6 (Necrophage) 44 22}
 #endif
         [kill]
             id=Familiar
@@ -515,7 +525,7 @@
 
         [move_unit_fake]
             type=Familiar
-            side=5
+            side=6
             x=42,43,44,45
             y=23,23,22,22
         [/move_unit_fake]
