--- a/data/campaigns/The_Rise_Of_Wesnoth/scenarios/13_Peoples_in_Decline.cfg
+++ b/data/campaigns/The_Rise_Of_Wesnoth/scenarios/13_Peoples_in_Decline.cfg
@@ -118,6 +118,16 @@
         [/ai]
     [/side]
 
+    [side]
+        side=5
+        no_leader=yes
+        team_name=Drake
+        hidden=yes
+        [ai]
+            village_value=0
+        [/ai]
+    [/side]
+
     [event]
         name=prestart
         {OBJ_TRIDENT_STORM 17 18 (trident)}
@@ -234,7 +244,7 @@
             {VARIABLE_OP xx1 rand "18..19"}
             {VARIABLE_OP yy1 rand "16..19"}
 
-            {NAMED_LOYAL_UNIT 4 (Sea Serpent) $xx1 $yy1 (Bitey the Serpent) ( _ "Bitey the Serpent")}
+            {NAMED_LOYAL_UNIT 5 (Sea Serpent) $xx1 $yy1 (Bitey the Serpent) ( _ "Bitey the Serpent")}
 
             [message]
                 side=1
