--- a/data/campaigns/The_Rise_Of_Wesnoth/scenarios/19_The_Vanguard.cfg
+++ b/data/campaigns/The_Rise_Of_Wesnoth/scenarios/19_The_Vanguard.cfg
@@ -142,6 +142,16 @@
         {INCOME 2 4 8}
     [/side]
 
+    [side]
+        side=5
+        no_leader=yes
+        team_name=orcs
+        hidden=yes
+        [ai]
+            village_value=0
+        [/ai]
+    [/side]
+
     {STARTING_VILLAGES 4 8}
 
     [event]
@@ -491,11 +501,11 @@
                                 [case]
                                     value=1
 
-                                    {NAMED_LOYAL_UNIT $unit.side Deathblade $|spawn_x $|spawn_y Norte _"Norte"}
+                                    {NAMED_LOYAL_UNIT 5 Deathblade $|spawn_x $|spawn_y Norte _"Norte"}
 
-                                    {LOYAL_UNIT $unit.side (Chocobone) $|spawn_x $|spawn_y}
+                                    {LOYAL_UNIT 5 (Chocobone) $|spawn_x $|spawn_y}
 #ifndef EASY
-                                    {LOYAL_UNIT $unit.side (Chocobone) $|spawn_x $|spawn_y}
+                                    {LOYAL_UNIT 5 (Chocobone) $|spawn_x $|spawn_y}
 #endif
 
                                     {CLEAR_FOG 1 $|possible_undead_locs[$|undead_loc_i].x $|possible_undead_locs[$|undead_loc_i].y 2}
@@ -509,12 +519,12 @@
                                 [case]
                                     value=2
 
-                                    {NAMED_LOYAL_UNIT $unit.side Banebow $|spawn_x $|spawn_y Rabbin _"Rabbin"}
+                                    {NAMED_LOYAL_UNIT 5 Banebow $|spawn_x $|spawn_y Rabbin _"Rabbin"}
 
-                                    {LOYAL_UNIT $unit.side (Chocobone) $|spawn_x $|spawn_y}
-                                    {LOYAL_UNIT $unit.side (Chocobone) $|spawn_x $|spawn_y}
+                                    {LOYAL_UNIT 5 (Chocobone) $|spawn_x $|spawn_y}
+                                    {LOYAL_UNIT 5 (Chocobone) $|spawn_x $|spawn_y}
 #ifdef HARD
-                                    {LOYAL_UNIT $unit.side (Chocobone) $|spawn_x $|spawn_y}
+                                    {LOYAL_UNIT 5 (Chocobone) $|spawn_x $|spawn_y}
 #endif
 
                                     {CLEAR_FOG 1 $|possible_undead_locs[$|undead_loc_i].x $|possible_undead_locs[$|undead_loc_i].y 2}
@@ -533,13 +543,13 @@
                                 [case]
                                     value=3
 
-                                    {NAMED_LOYAL_UNIT $unit.side Draug $|spawn_x $|spawn_y "General Kafka" _"General Kafka"}
+                                    {NAMED_LOYAL_UNIT 5 Draug $|spawn_x $|spawn_y "General Kafka" _"General Kafka"}
 
-                                    {LOYAL_UNIT $unit.side  (Chocobone) $|spawn_x $|spawn_y}
-                                    {LOYAL_UNIT $unit.side  (Chocobone) $|spawn_x $|spawn_y}
+                                    {LOYAL_UNIT 5  (Chocobone) $|spawn_x $|spawn_y}
+                                    {LOYAL_UNIT 5  (Chocobone) $|spawn_x $|spawn_y}
 #ifdef HARD
-                                    {LOYAL_UNIT $unit.side  (Chocobone) $|spawn_x $|spawn_y}
-                                    {LOYAL_UNIT $unit.side  (Chocobone) $|spawn_x $|spawn_y}
+                                    {LOYAL_UNIT 5  (Chocobone) $|spawn_x $|spawn_y}
+                                    {LOYAL_UNIT 5  (Chocobone) $|spawn_x $|spawn_y}
 #endif
 
                                     {CLEAR_FOG 1 $|possible_undead_locs[$|undead_loc_i].x $|possible_undead_locs[$|undead_loc_i].y 2}
