--- a/data/campaigns/The_Rise_Of_Wesnoth/scenarios/17a_The_Dragon.cfg
+++ b/data/campaigns/The_Rise_Of_Wesnoth/scenarios/17a_The_Dragon.cfg
@@ -166,6 +166,16 @@
         [/ai]
     [/side]
 
+    [side]
+        side=6
+        no_leader=yes
+        team_name=Liz
+        hidden=yes
+        [ai]
+            village_value=0
+        [/ai]
+    [/side]
+
     {STARTING_VILLAGES 5 10}
 
     {campaigns/The_Rise_Of_Wesnoth/utils/trow-nlmsg.cfg}
@@ -358,7 +368,7 @@
                 numerical_equals=0
             [/variable]
             [then]
-                {NAMED_LOYAL_UNIT 5 (Fire Dragon) 20 27 ("Shek'kahan") ( _ "Shek’kahan")}
+                {NAMED_LOYAL_UNIT 6 (Fire Dragon) 20 27 ("Shek'kahan") ( _ "Shek’kahan")}
                 [+unit]
                     profile=portraits/shekkahan.png
                 [/unit]
@@ -393,7 +403,10 @@
                 numerical_equals=0
             [/variable]
             [then]
-                {NAMED_LOYAL_UNIT 5 (Fire Dragon) 20 27 ("Shek'kahan") ( _ "Shek’kahan")}
+                {NAMED_LOYAL_UNIT 6 (Fire Dragon) 20 27 ("Shek'kahan") ( _ "Shek’kahan")}
+                [+unit]
+                    profile=portraits/shekkahan.png
+                [/unit]
 
                 [set_variable]
                     name=dragon_awake
