TRoW S4: Fix scorpions placement

--- a/data/campaigns/The_Rise_Of_Wesnoth/scenarios/04a_The_Swamp_of_Esten.cfg
+++ b/data/campaigns/The_Rise_Of_Wesnoth/scenarios/04a_The_Swamp_of_Esten.cfg
@@ -265,57 +265,21 @@
             name=new turn
             delayed_variable_substitution=no
 
-            [store_unit]
-                [filter]
-                    side=1
-                [/filter]
-
-                kill=no
-                variable=temp
-            [/store_unit]
-
-            {VARIABLE i 0}
-            [while]
-                [variable]
-                    name=i
-                    less_than=$|temp.length
-                [/variable]
-
-                [do]
-                    [store_locations]
-                        find_in=player_vision_edge
-
-                        [or]
-                            x,y=$|temp[$|i].x,$|temp[$|i].y
-                            radius="$|($|temp[$|i].max_moves + 1)"
-
-                            [filter_radius]
-                                terrain=Wwf,G*,R*
-                            [/filter_radius]
-                        [/or]
-
-                        variable=player_vision_edge
-                    [/store_locations]
-
-                    {VARIABLE_OP i add 1}
-                [/do]
-            [/while]
-
             [store_locations]
-                find_in=player_vision_edge
-
+                [filter_vision]
+                    side=1
+                    visible=yes
+                [/filter_vision]
                 [filter_adjacent_location]
-                    terrain=Wwf,G*,R*
-
-                    [not]
-                        find_in=player_vision_edge
-                    [/not]
+                    [filter_vision]
+                        side=1
+                        visible=no
+                    [/filter_vision]
                 [/filter_adjacent_location]
+                terrain=Wwf,G*,R*
 
                 variable=player_vision_edge
             [/store_locations]
-
-            {CLEAR_VARIABLE temp}
 
             {VARIABLE search_radius 5}
             [while]
@@ -376,6 +340,9 @@
             [/while]
 
             {CLEAR_VARIABLE player_vision_edge,search_radius,temp,possible_scorpion_locs}
+
+            [redraw]
+            [/redraw]
         [/event]
     [/event]
 
