TRoW S14: Fix sea serpents placement

--- a/data/campaigns/The_Rise_Of_Wesnoth/scenarios/14_Rough_Landing.cfg
+++ b/data/campaigns/The_Rise_Of_Wesnoth/scenarios/14_Rough_Landing.cfg
@@ -265,6 +265,7 @@
 
             # We need to use this lengthy SLF twice, so macroify it here...
 #define POSSIBLE_SERPENT_SPAWN_LOCS_SLF
+    include_borders=no
     terrain=Wo*
 
     [not]
