--- a/data/core/units/elves/Champion.cfg
+++ b/data/core/units/elves/Champion.cfg
@@ -16,7 +16,7 @@
     {AMLA_DEFAULT}
     cost=48
     usage=fighter
-    description= _ "Elves are typically peaceable by nature and most will only attack in retaliation for some wrongdoing wrought upon them. However, there are some elves who revel in the glory of battle and deliberately seek combat—purposeful or otherwise—for their own enjoyment. Naturally, most of these warriors live short lives dedicated mostly to honing their swordsmanship in an effort to survive and conquer the battlegrounds. Mere dedication is not enough for most to endure for very long; only the most talented are capable of persisting through constant combat and earning the title of 'Champion'. Having spent their whole lives refining their prowess with the blade, these elves are exceptionally dangerous and should never be underestimated."
+    description= _ "Elves are typically peaceable by nature and most will attack only in retaliation for some wrongdoing wrought upon them. However, there are some elves who revel in the glory of battle and deliberately seek combat—purposeful or otherwise—for their own enjoyment. Naturally, most of these warriors live short lives dedicated mostly to honing their swordsmanship in an effort to survive and conquer the battlegrounds. Mere dedication is not enough for most to endure for very long; only the most talented are capable of persisting through constant combat and earning the title of 'Champion'. Having spent their whole lives refining their prowess with the blade, these elves are exceptionally dangerous and should never be underestimated."
     die_sound={SOUND_LIST:ELF_HIT}
     [attack]
         name=sword
